--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
-
         </section>
     </main>
     <footer>
-
+        <a href="/index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
