--- a/index.html
+++ b/index.html
@@ -1,86 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Header-->
     <header>
+      <nav>
         <a href="/index.html">WebStudio</a>
-        <nav>
-            <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
         <ul>
-        <li>info@devstudio.com</li>
-        <li>+11 (000) 111-11-11</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="/images/img 1 (1).jpg" alt="monitor"></li>
-                <li><img src="/images/img 2 (1).jpg" alt="messenger in the phone"></li>
-                <li><img src="/images/img 3 (1).jpg" alt="phone in hands"></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="/images/img (4).jpg" alt="">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="/images/img (1) (1).jpg" alt="">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="/images/img (2) (1).jpg" alt="">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="/images/img (3) (1).jpg" alt="">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <!--Hero section-->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <!--Preference section-->
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--Activity section-->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="/images/img1(1).jpg" alt="monitor" width="360" />
+          </li>
+          <li>
+            <img
+              src="/images/img2(1).jpg"
+              alt="messenger in the phone"
+              width="360"
+            />
+          </li>
+          <li>
+            <img src="/images/img3(1).jpg" alt="phone in hands" width="360" />
+          </li>
+        </ul>
+      </section>
+      <!--Team section-->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="/images/img(4).jpg" alt="man" width="260" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="/images/img(1)(1).jpg" alt="man" width="260" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="/images/img(2)(1).jpg" alt="woman" width="260" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="/images/img(3)(1).jpg" alt="man" width="260" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
+    <!--Footer-->
     <footer>
-        <a href="/index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="/index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
