--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Header-->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -17,8 +17,14 @@
         </ul>
       </nav>
       <address>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -29,6 +35,7 @@
       </section>
       <!--Preference section-->
       <section>
+        <h2>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -65,41 +72,41 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="/images/img1(1).jpg" alt="monitor" width="360" />
+            <img src="./images/img1(1).jpg" alt="monitor" width="360" />
           </li>
           <li>
             <img
-              src="/images/img2(1).jpg"
+              src="./images/img2(1).jpg"
               alt="messenger in the phone"
               width="360"
             />
           </li>
           <li>
-            <img src="/images/img3(1).jpg" alt="phone in hands" width="360" />
+            <img src="./images/img3(1).jpg" alt="phone in hands" width="360" />
           </li>
         </ul>
       </section>
-      <!--Team section-->
+      <!--Team section-->.
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/img(4).jpg" alt="man" width="260" />
+            <img src="./images/img(4).jpg" alt="man" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/img(1)(1).jpg" alt="man" width="260" />
+            <img src="./images/img(1)(1).jpg" alt="man" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/img(2)(1).jpg" alt="woman" width="260" />
+            <img src="./images/img(2)(1).jpg" alt="woman" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/img(3)(1).jpg" alt="man" width="260" />
+            <img src="./images/img(3)(1).jpg" alt="man" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -108,7 +115,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
